--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:web="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd http://xmlns.jcp.org/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="5.0">
   <display-name>EventosYa</display-name>
   <welcome-file-list>
-    <welcome-file>webs/MenuUsuario_Menu.jsp</welcome-file>
+    <welcome-file>webs/MenuUsuario_Config_Contra.jsp</welcome-file>
     <welcome-file>index.jsp</welcome-file>
     <welcome-file>ConfirmarRegistro.jsp</welcome-file>
     <welcome-file>CrearEvento.jsp</welcome-file>
