--- a/.classpath
+++ b/.classpath
@@ -17,5 +17,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/Sebastian/OneDrive - CIBERTEC/CIBERTEC CICLO 4/Lenguaje de Programacion II/PF_LPI/libs/mysql-connector-java-8.0.30.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Sebastian/OneDrive - CIBERTEC/CIBERTEC CICLO 4/Lenguaje de Programacion II/PF_LPI/libs/itextpdf-5.5.9.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
